Revision history for Perl extension Coro.

TODO: better (earlier) error messages on broken transfer's
TODO: destroy gets only called on cancel: fix(?)

   	- added some bugfixes to get eg/myhttpd working again.

3.55  Sun Mar 25 01:20:47 CET 2007
	- add SAVE_DEFFH to save the default filehandle and enable
          it by default.
        - finally move socket-operations from Coro::Socket to Coro::Handle
          to be able to unblock foreign sockets.
	- add Coro::State::save_also and guarded_save.
	- add count accessor to Coro::Semaphore.
        - add Coro::State::cctx_stacksize.
        - just for the fun of it, do not rely on implicit context,
          which can dramatically improve performance, but people
          using windows-process-emulation perls do not care much about
          performance.

3.51  Sun Mar  4 14:18:04 CET 2007
	- fixed a problem when you weakened references to Coro::State's
          (patch by Yuval Kogman).

3.501 Wed Feb 28 12:44:07 CET 2007
	- rename some global symbols as macosx from hell redefines
          them without asking.

3.5 Tue Feb 13 20:22:53 CET 2007
	- do AnyEvent model detection earlier, avoiding problems
          caused by first using AnyEvent and later Coro::Event.
        - implement and document Coro::Event event objects.
        - fix a potential problem in Coro::Event causing crashes.
        - initialise PL_comppad when creating a new coroutine,
          avoids crashes on early coro destruction.

3.41 Mon Jan 22 19:19:49 CET 2007
	- readline on Coro::Handle did not support undefined $/,
          nor did it deliver partial lines on EOF or error.
        - implement malloc fallback for stack allocation because
          stupid broken idiotic OSX has a stupid broken
          idiotic fits-the-whole-os mmap "implementation" and
          my dick feels longer if Coro is portable even to
          obsolete platforms.

3.4  Fri Jan 19 21:52:54 CET 2007
	- remove t/09_timer.t, as it isn't really testing much