@@ -27,6 +27,7 @@ Coro/Select.pm
 Coro/Handle.pm
 Coro/Socket.pm
 Coro/Timer.pm
+Coro/Storable.pm
 
 Coro/libcoro/LICENSE
 Coro/libcoro/coro.h
